[gd_scene load_steps=5 format=3 uid="uid://bbhj3h2yk0661"]

[ext_resource type="Script" uid="uid://bxk7a77858odt" path="res://Scripts/Control/MMControl.gd" id="1_li6dc"]
[ext_resource type="Theme" uid="uid://usgy0r54xogk" path="res://Themes/UI.tres" id="2_elaay"]
[ext_resource type="AudioStream" uid="uid://clueic74k1cgs" path="res://SFX/Click.wav" id="2_ml6h1"]
[ext_resource type="AudioStream" uid="uid://u512iytagkiu" path="res://Music/LoopMain.wav" id="3_kjxhj"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_li6dc")

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_right = 1.0
anchor_bottom = 0.11
offset_left = -0.296021
offset_bottom = -0.280006
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_elaay")
text = "Start Looping
"

[node name="Continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.171
anchor_right = 1.0
anchor_bottom = 0.281
offset_left = -0.296021
offset_top = 0.192001
offset_bottom = -0.0880127
grow_horizontal = 2
grow_vertical = 0
text = "Continue Looping
"

[node name="Restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.352
anchor_right = 1.0
anchor_bottom = 0.461
offset_left = -0.296021
offset_top = -0.0960236
offset_bottom = 0.271973
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="Settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.532
anchor_right = 1.0
anchor_bottom = 0.642
offset_left = -0.296021
offset_top = 0.264008
offset_bottom = -0.0160217
grow_horizontal = 2
grow_vertical = 0
text = "Settings"

[node name="Credits" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.708
anchor_right = 1.0
anchor_bottom = 0.818
offset_left = -0.296021
offset_top = 0.216003
offset_bottom = -0.0640259
grow_horizontal = 2
grow_vertical = 0
text = "Credits"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.673
anchor_top = 0.889
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.296021
offset_top = -0.0720215
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "Quit
"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ml6h1")

[node name="MusicMainPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kjxhj")

[node name="Endless" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.313
anchor_bottom = 0.11
offset_right = 0.423981
offset_bottom = -0.280006
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 45
text = "An Endless Loop"

[connection signal="button_up" from="Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="Continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_quit_button_up"]
